Fixed white space on right

--- a/style.css
+++ b/style.css
@@ -8,6 +8,15 @@
     width: extent-to-zoom;
 }
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 ::selection {
     background-color: transparent;
 }
